--- a/index.html
+++ b/index.html
@@ -3,33 +3,156 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>3amova</title>
+    <title>3@.Mova</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <svg class="sprite" xmlns="http://www.w3.org/2000/svg">
+      <symbol id="facebook_svg" viewbox="0 0 408.788 408.788">
+        <path
+          d="M353.701,0H55.087C24.665,0,0.002,24.662,0.002,55.085v298.616c0,30.423,24.662,55.085,55.085,55.085
+        h147.275l0.251-146.078h-37.951c-4.932,0-8.935-3.988-8.954-8.92l-0.182-47.087c-0.019-4.959,3.996-8.989,8.955-8.989h37.882
+        v-45.498c0-52.8,32.247-81.55,79.348-81.55h38.65c4.945,0,8.955,4.009,8.955,8.955v39.704c0,4.944-4.007,8.952-8.95,8.955
+        l-23.719,0.011c-25.615,0-30.575,12.172-30.575,30.035v39.389h56.285c5.363,0,9.524,4.683,8.892,10.009l-5.581,47.087
+        c-0.534,4.506-4.355,7.901-8.892,7.901h-50.453l-0.251,146.078h87.631c30.422,0,55.084-24.662,55.084-55.084V55.085
+        C408.786,24.662,384.124,0,353.701,0z"
+        />
+      </symbol>
+      <symbol id="instagram_svg" viewBox="0 0 512 512">
+        <path
+          d="M65.741,0.021H446.29c36.154,0,65.71,29.566,65.71,65.72V446.29c0,36.144-29.556,65.69-65.71,65.69
+        H65.741C29.587,511.98,0,482.432,0,446.29V65.741C0,29.587,29.587,0.021,65.741,0.021z M372.985,56.882
+        c-12.694,0-23.049,10.395-23.049,23.083v55.149c0,12.692,10.354,23.064,23.049,23.064h57.861c12.674,0,23.05-10.371,23.05-23.064
+        V79.964c0-12.687-10.377-23.083-23.05-23.083C430.846,56.882,372.985,56.882,372.985,56.882z M454.117,216.521h-45.049
+        c4.272,13.952,6.588,28.665,6.588,43.962c0,85.132-71.281,154.18-159.174,154.18c-87.871,0-159.154-69.048-159.154-154.18
+        c0-15.297,2.338-30.01,6.589-43.962h-47v216.289c0,11.201,9.146,20.313,20.337,20.313h356.535c11.201,0,20.328-9.112,20.328-20.313
+        V216.521z M256.483,155.269c-56.764,0-102.81,44.592-102.81,99.649c0,55.001,46.046,99.627,102.81,99.627
+        c56.794,0,102.842-44.626,102.842-99.627C359.325,199.859,313.277,155.269,256.483,155.269z"
+        />
+      </symbol>
+    </svg>
+
     <div class="header-container">
-      <h3 class="header-title">3amova</h3>
+      <h3 class="header-title">3@.mova</h3>
       <p class="header-text" id="header-text">
-        Замо́ва — старажытны жанр народнай паэзіі, слоўная формула, якой
+        "Замо́ва" — старажытны жанр народнай паэзіі, слоўная формула, якой
         надавалася магічнае значэньне.
       </p>
-      <button id="switch_lg_btn" class="switch-lang-button">BY</button>
+
+      <div class="button-container">
+        <button id="switch_lg_btn" class="switch-lang-button">BY</button>
+      </div>
     </div>
     <div class="content-container">
       <p class="css-content-text" id="content-text">
-        Асэнсаванне сувязі культуры, мовы, песні як сродкаў сувязі з радзімай.
-        Даслед на тэму з'яулення народнай песні яе роля ў жыцці продкаў і у
-        жыцці сучаснага соцыўма. Мова як праява нацыянальнай ідэнтычнасці.
-        Эксперымент на конт магчымай актуалізацыі народнай творчасці ў сучасным
-        уяўленні, актуалізацыя народнай песні.
+        Наш праект гэта даслед на тэму з'яулення народнай песні яе роля ў жыцці
+        продкаў і ў жыцці сучаснага соцыўма. Эксперымент на конт магчымай
+        актуалізацыі народнай творчасці ў сучасным уяўленні, актуалізацыя
+        народнай песні.
       </p>
-      <div class="css-content-img" id="js-dinamic-image">
+      <div class="css-content-img" id="js-dinamic-image"></div>
+    </div>
+    <footer>
+      <h3 class="footer-title">Participants</h3>
+      <div class="footer-container">
+        <!-- compositor -->
+        <div class="footer-person-card">
+          <h4 class="person-title">Music by Nikita Zolotar</h4>
+          <a
+            class="social-media-link"
+            href="https://www.facebook.com/profile.php?id=100002163693757"
+            target="_blank"><svg class="social-media-icon">
+              <use href="#facebook_svg"></use></svg></a>
+        </div>
+
+        <!-- author -->
+        <div class="footer-person-card">
+          <h4 class="person-title">Idea by Maksym Shyshko</h4>
+          <a
+            class="social-media-link"
+            href="https://www.facebook.com/atenobi"
+            target="_blank"><svg class="social-media-icon">
+              <use href="#facebook_svg"></use></svg></a>
+          <a
+            class="social-media-link"
+            href="https://www.instagram.com/atenobi/"
+            target="_blank"><svg class="social-media-icon">
+              <use href="#instagram_svg"></use></svg></a>
+        </div>
+
+        <!-- actor(Andrey) -->
+        <div class="footer-person-card">
+          <h4 class="person-title">Andrey Novik</h4>
+          <a
+            class="social-media-link"
+            href="https://www.facebook.com/profile.php?id=100006150283610"
+            target="_blank"><svg class="social-media-icon">
+              <use href="#facebook_svg"></use></svg></a>
+          <a
+            class="social-media-link"
+            href="https://www.instagram.com/novik732/"
+            target="_blank"><svg class="social-media-icon">
+              <use href="#instagram_svg"></use></svg></a>
+        </div>
+
+        <!-- actor(Dasha) -->
+        <div class="footer-person-card">
+          <h4 class="person-title">Dasha Novik</h4>
+          <a
+            class="social-media-link"
+            href="https://www.facebook.com/profile.php?id=100005170000178"
+            target="_blank"><svg class="social-media-icon">
+              <use href="#facebook_svg"></use></svg></a>
+          <a
+            class="social-media-link"
+            href="https://www.instagram.com/volojina18121989/"
+            target="_blank"><svg class="social-media-icon">
+              <use href="#instagram_svg"></use></svg></a>
+        </div>
+
+        <!-- actor(Masha) -->
+        <div class="footer-person-card">
+          <h4 class="person-title">Masha Piatrovich</h4>
+          <a
+            class="social-media-link"
+            href="https://www.facebook.com/masha.petr"
+            target="_blank"><svg class="social-media-icon">
+              <use href="#facebook_svg"></use></svg></a>
+          <a
+            class="social-media-link"
+            href="https://www.instagram.com/masha_pietrovich/"
+            target="_blank"><svg class="social-media-icon"><use href="#instagram_svg"></use></svg></a>
+        </div>
       </div>
-    </div>
-    <div class="footer-container">
-      <h3>footer</h3>
-    </div>
-    <script src="index.js"></script>
+
+      <h3 class="footer-title">With support</h3>
+
+      <div class="footer-container">
+        <div class="footer-person-card">
+          <h4 class="person-title">TR Warzshawa</h4>
+          <a
+            class="social-media-link"
+            href="https://trwarszawa.pl/en/"
+            target="_blank">To TR page</a>
+        </div>
+
+        <div class="footer-person-card">
+          <h4 class="person-title">TIM Theatre</h4>
+          <a
+          class="social-media-link"
+          href="https://www.facebook.com/timteatr/"
+          target="_blank"><svg class="social-media-icon">
+            <use href="#facebook_svg"></use></svg></a>
+        <a
+          class="social-media-link"
+          href="https://www.instagram.com/timteatr/"
+          target="_blank"><svg class="social-media-icon"><use href="#instagram_svg"></use></svg></a>
+        </div>
+
+      </div>
+    </footer>
+
+    <script src="language.js"></script>
     <script src="image.js"></script>
   </body>
 </html>
