--- a/index.html
+++ b/index.html
@@ -55,7 +55,61 @@
         актуалізацыі народнай творчасці ў сучасным уяўленні, актуалізацыя
         народнай песні.
       </p>
+
       <div class="css-content-img" id="js-dinamic-image"></div>
+
+      <div class="content-container">
+
+        <h3 class="content__title" id="content__title">Tэкст выкарыстаны у спектаклі </h3>
+
+        <p class="css-content-text" id="content__words">
+          Дрэва без каранёў не бывае. Ёсць свае карані і ў
+          кожнага з нас. I ўваходзяць яны ў глыбіню стагоддзяў.
+          Праўда, не заўсёды лёгка іх адшукаць, дакапацца да іх. Не
+          ва ўсіх, далёка не ва ўсіх продкі чым-небудзь вызначыліся,
+          праславіліся. Ды і хто яны такія, каб трапляць на старонкі
+          летапісаў ці ў аналы гісторыі?
+          У большасці гэта былі звычайныя, простыя людзі –
+          асочвалі звяроў, лавілі рыбу, засявалі поле, даглядалі
+          худобу, гадавалі дзяцей, словам, жылі. Жылі ціха,
+          малапрыкметна. Так і паміралі.
+          Што хвалявала нашых продкаў, пра што яны думалі,
+          блукаючы, ходзячы па лесе, працуючы на пажарышчах,
+          палянах, у балоце? Ці калі дома, у куранях і хатах, сядзелі ў
+          доўгія цёмныя асеннія вечары і ночы, у зімовыя халады і
+          сцюжы, у асеннюю бездараж і вясновае разводдзе?
+          Калі я бываю дома, там, дзе нарадзіўся, я падоўгу стаю на
+          могілках – яны ў нас трохі ўбаку ад вёскі, на пагорку,
+          парослым старым і маладым хвойнікам, – і, гледзячы на
+          крыжы, – чорныя, падгнілыя, а некаторыя і паваленыя,
+          амшэлыя, – думаю пра гэта.
+          I разгадку спрабую шукаць у тых песнях, казках, легендах,
+          прыказках і прымаўках, што пакінулі продкі і якія чуў я ў
+          маленстве, на якіх выхоўваўся, рос, як кажуць у нас, на лес
+          гледзячы... Узыходзіць сонца і заходзіць... Святло – цемра, дзень –
+          ноч... I зноў: святло – цемра, дзень – ноч... Прылятаюць з
+          выраю птушкі і адлятаюць у вырай... Зелянеюць дрэвы,
+          кусты і жаўцеюць, скідваюць з сябе лісце, астаюцца быццам
+          голыя... Падае ў зямлю зерне, прарастае, дае ўсходы і
+          новае зерне – новае насенне... Вясна, лета, восень, зіма... I
+          зноў: вясна, лета, восень, зіма... За адным пакаленнем
+          людзей ідзе яшчэ і яшчэ пакаленне... Што значым ты, я, ён,
+          яна, усе мы ў гэтым няспынным і вечным кругазвароце?
+          Нараджаемся, жывём, паміраем... Як нараджаліся, жылі і
+          памёрлі многія-многія мільёны, мільярды ўжо да нас. У чым
+          сэнс чалавечага існавання, жыцця, з’яўлення на свет?
+          Дзеля чаго нараджаліся і нараджаемся, што павінны
+          зрабіць, пакінуць нашчадкам, тым, хто прыйдзе на змену,
+          будзе жыць пасля нас? У каго спытаць, хто, хто скажа,
+          навучыць?.. А можа... I не спрабаваць шукаць адказу, не
+          думаць пра тое, чаго пры ўсім сваім жаданні ўсё адно не
+          ўведаеш, не пытаць ні ў кога ні пра што, а жыць, як
+          набяжыць... Жыць, як жылі бацькі, дзяды, прадзеды нашы...
+          А яны... Што ведаем мы пра іх, нашых бацькоў, дзядоў,
+          прадзедаў, пра іхняе жыццё-быццё, іхнія думкі і мары,
+          клопат і дбанне? Ну не пра ўсіх, хто жыў даўным-даўно, дык
+          хоць бы пра свой род, сваіх продкаў?..
+        </p>
     </div>
     <footer>
       <h3 class="footer-title">Participants</h3>
@@ -68,8 +122,7 @@
             href="https://www.facebook.com/profile.php?id=100002163693757"
             target="_blank"
             ><svg class="social-media-icon">
-              <use href="#facebook_svg"></use></svg
-          ></a>
+              <use href="#facebook_svg"></use></svg></a>
         </div>
 
         <!-- author -->
@@ -80,15 +133,13 @@
             href="https://www.facebook.com/atenobi"
             target="_blank"
             ><svg class="social-media-icon">
-              <use href="#facebook_svg"></use></svg
-          ></a>
+              <use href="#facebook_svg"></use></svg></a>
           <a
             class="social-media-link"
             href="https://www.instagram.com/atenobi/"
             target="_blank"
             ><svg class="social-media-icon">
-              <use href="#instagram_svg"></use></svg
-          ></a>
+              <use href="#instagram_svg"></use></svg></a>
         </div>
 
         <!-- actor(Andrey) -->
@@ -99,15 +150,13 @@
             href="https://www.facebook.com/profile.php?id=100006150283610"
             target="_blank"
             ><svg class="social-media-icon">
-              <use href="#facebook_svg"></use></svg
-          ></a>
+              <use href="#facebook_svg"></use></svg></a>
           <a
             class="social-media-link"
             href="https://www.instagram.com/novik732/"
             target="_blank"
             ><svg class="social-media-icon">
-              <use href="#instagram_svg"></use></svg
-          ></a>
+              <use href="#instagram_svg"></use></svg></a>
         </div>
 
         <!-- actor(Dasha) -->
@@ -118,15 +167,13 @@
             href="https://www.facebook.com/profile.php?id=100005170000178"
             target="_blank"
             ><svg class="social-media-icon">
-              <use href="#facebook_svg"></use></svg
-          ></a>
+              <use href="#facebook_svg"></use></svg></a>
           <a
             class="social-media-link"
             href="https://www.instagram.com/volojina18121989/"
             target="_blank"
             ><svg class="social-media-icon">
-              <use href="#instagram_svg"></use></svg
-          ></a>
+              <use href="#instagram_svg"></use></svg></a>
         </div>
 
         <!-- actor(Masha) -->
@@ -137,15 +184,13 @@
             href="https://www.facebook.com/masha.petr"
             target="_blank"
             ><svg class="social-media-icon">
-              <use href="#facebook_svg"></use></svg
-          ></a>
+              <use href="#facebook_svg"></use></svg></a>
           <a
             class="social-media-link"
             href="https://www.instagram.com/masha_pietrovich/"
             target="_blank"
             ><svg class="social-media-icon">
-              <use href="#instagram_svg"></use></svg
-          ></a>
+              <use href="#instagram_svg"></use></svg></a>
         </div>
       </div>
 
@@ -159,8 +204,7 @@
             href="https://trwarszawa.pl/en/"
             target="_blank"
             ><svg class="social-media-icon">
-              <use href="#tr_svg"></use></svg
-          ></a>
+              <use href="#tr_svg"></use></svg></a>
         </div>
 
         <div class="footer-person-card">
@@ -170,15 +214,13 @@
             href="https://www.facebook.com/timteatr/"
             target="_blank"
             ><svg class="social-media-icon">
-              <use href="#facebook_svg"></use></svg
-          ></a>
+              <use href="#facebook_svg"></use></svg></a>
           <a
             class="social-media-link"
             href="https://www.instagram.com/timteatr/"
             target="_blank"
             ><svg class="social-media-icon">
-              <use href="#instagram_svg"></use></svg
-          ></a>
+              <use href="#instagram_svg"></use></svg></a>
         </div>
       </div>
     </footer>
