--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         </div>
       </div>
     </footer>
-
+<!-- scripts -->
     <script src="language.js"></script>
     <script src="image.js"></script>
   </body>
