--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="header-container">
       <h3 class="header-title">3@.mova</h3>
-      <p class="header-text" id="header-text">
+      <p class="header-text" id="js-header-text">
         "Замо́ва" — старажытны жанр народнай паэзіі, слоўная формула, якой
         надавалася магічнае значэньне.
       </p>
@@ -49,7 +49,7 @@
       </div>
     </div>
     <div class="content-container">
-      <p class="css-content-text" id="content-text">
+      <p class="css-content-text" id="js-content-text">
         Наш праект гэта даслед на тэму з'яулення народнай песні яе роля ў жыцці
         продкаў і ў жыцці сучаснага соцыўма. Эксперымент на конт магчымай
         актуалізацыі народнай творчасці ў сучасным уяўленні, актуалізацыя
@@ -60,9 +60,9 @@
 
       <div class="content-container">
 
-        <h3 class="content__title" id="content__title">Tэкст выкарыстаны у спектаклі </h3>
+        <h3 class="content__title" id="js-content-title">Tэкст выкарыстаны у спектаклі </h3>
 
-        <p class="css-content-text" id="content__words">
+        <p class="css-content-text" id="js-content-words">
           Дрэва без каранёў не бывае. Ёсць свае карані і ў
           кожнага з нас. I ўваходзяць яны ў глыбіню стагоддзяў.
           Праўда, не заўсёды лёгка іх адшукаць, дакапацца да іх. Не
@@ -111,6 +111,26 @@
           хоць бы пра свой род, сваіх продкаў?..
         </p>
     </div>
+
+    <div class="content-container">
+
+      <h3 class="content__title" id="js-songs-title">Песні</h3>
+
+      <p class="css-content-text" id="js-songs-fog">
+    За туманам Нічаго не відна...
+     Толькі відна Дуба зелянога.
+    Пад тым дубам Крыніца стаяла.
+     З той крыніцы Дзеўка ваду брала.
+     Абараніла Залатое калечка.
+     "А хто ж тое Калечка дастане,
+    Той са мною На рушнічак стане."
+    (возьме ў жены) Адазваўся
+    Хлопец маладзенькі: "А я ж тваё
+     Калечка дастану, Я ж з табою 
+    На рушнічак стану!" -"Лепей буду 
+    Палын горкі есці, Чым з табою За столікам сесці!"
+      </p>
+  </div>
     <footer>
       <h3 class="footer-title">Participants</h3>
       <div class="footer-container">
