--- a/index.html
+++ b/index.html
@@ -86,29 +86,9 @@
           I разгадку спрабую шукаць у тых песнях, казках, легендах,
           прыказках і прымаўках, што пакінулі продкі і якія чуў я ў
           маленстве, на якіх выхоўваўся, рос, як кажуць у нас, на лес
-          гледзячы... Узыходзіць сонца і заходзіць... Святло – цемра, дзень –
-          ноч... I зноў: святло – цемра, дзень – ноч... Прылятаюць з
-          выраю птушкі і адлятаюць у вырай... Зелянеюць дрэвы,
-          кусты і жаўцеюць, скідваюць з сябе лісце, астаюцца быццам
-          голыя... Падае ў зямлю зерне, прарастае, дае ўсходы і
-          новае зерне – новае насенне... Вясна, лета, восень, зіма... I
-          зноў: вясна, лета, восень, зіма... За адным пакаленнем
-          людзей ідзе яшчэ і яшчэ пакаленне... Што значым ты, я, ён,
-          яна, усе мы ў гэтым няспынным і вечным кругазвароце?
-          Нараджаемся, жывём, паміраем... Як нараджаліся, жылі і
-          памёрлі многія-многія мільёны, мільярды ўжо да нас. У чым
-          сэнс чалавечага існавання, жыцця, з’яўлення на свет?
-          Дзеля чаго нараджаліся і нараджаемся, што павінны
-          зрабіць, пакінуць нашчадкам, тым, хто прыйдзе на змену,
-          будзе жыць пасля нас? У каго спытаць, хто, хто скажа,
-          навучыць?.. А можа... I не спрабаваць шукаць адказу, не
-          думаць пра тое, чаго пры ўсім сваім жаданні ўсё адно не
-          ўведаеш, не пытаць ні ў кога ні пра што, а жыць, як
-          набяжыць... Жыць, як жылі бацькі, дзяды, прадзеды нашы...
-          А яны... Што ведаем мы пра іх, нашых бацькоў, дзядоў,
-          прадзедаў, пра іхняе жыццё-быццё, іхнія думкі і мары,
-          клопат і дбанне? Ну не пра ўсіх, хто жыў даўным-даўно, дык
-          хоць бы пра свой род, сваіх продкаў?..
+          гледзячы...Хто дбае, той і мае... 
+          Свет не без добрых людзей... 
+          І жыць будзем, і гуляць будзем, а прыйдзе смерць – паміраць будзем..
         </p>
     </div>
 
@@ -117,18 +97,126 @@
       <h3 class="content__title" id="js-songs-title">Песні</h3>
 
       <p class="css-content-text" id="js-songs-fog">
-    За туманам Нічаго не відна...
-     Толькі відна Дуба зелянога.
-    Пад тым дубам Крыніца стаяла.
-     З той крыніцы Дзеўка ваду брала.
-     Абараніла Залатое калечка.
-     "А хто ж тое Калечка дастане,
-    Той са мною На рушнічак стане."
-    (возьме ў жены) Адазваўся
-    Хлопец маладзенькі: "А я ж тваё
-     Калечка дастану, Я ж з табою 
-    На рушнічак стану!" -"Лепей буду 
-    Палын горкі есці, Чым з табою За столікам сесці!"
+        За туманам Нічаго не відна...
+        Толькі відна Дуба зелянога.
+        Пад тым дубам Крыніца стаяла.
+        З той крыніцы Дзеўка ваду брала.
+        Абараніла Залатое калечка.
+        "А хто ж тое Калечка дастане,
+        Той са мною На рушнічак стане."
+        (возьме ў жены) Адазваўся
+        Хлопец маладзенькі: "А я ж тваё
+        Калечка дастану, Я ж з табою 
+        На рушнічак стану!" -"Лепей буду 
+        Палын горкі есці, Чым з табою За столікам сесці!"
+      </p>
+      <hr class="songs-separator">
+      <p class="css-content-text" id="js-songs-pine">
+        Зашумела сасоначка Над усходам сонца.
+        Заплакала дзяўчынанька,Гледзячы ў аконца.
+        "А мая ж ты, матуленька! Чаму не будзіла,
+        Як першая кампанячка У войска вырушыла?"
+        "А мая ж ты, дачушанька! Таму не будзіла,
+        Што твой мілы ўпярод пайшоў, Каб ты не тужыла"
+        "А мая ж ты, матуленька! Не тужу, не плачу,
+        Толькі выйду на вулачку-Сцежачкі не бачу!"
+        "А мая ж ты матуленька! Купі ты мне шоўку-
+        Буду шыць і вышываці Міламу кашульку."
+        Шыла-шыла, вышывала-Не хваціла шоўку.
+        Любілася - кахалася,Да не знала толку.
+      </p>
+      <hr class="songs-separator">
+      <p class="css-content-text" id="js-songs-cherry">
+        Зялёная вішня З-пад кораня выйшла.
+        Аддала ж  мяне маці Дзе я непрывычна.
+        Як выйду на гору Ды  крыкну дадому:
+        "Вары, маці, вячэру Шчэ і на маю долю!"
+        "Ты думаеш, мама. Што я тут не плачу -
+        За горкімі слязамі Я свету не бачу.
+        Ты думаеш, мама, Што я тут раюю-
+        Прыдзі, падзівіся, Як я тут гарую.
+        Успамяні ж мяне, мама, Хоць раз у суботу,
+        Як я успамінаю, Ідучы на работу.
+        Успамяні ж мяне, мама, Хоць раз у нядзелю,
+        Як я успамінаю Сцелючы пасцелю.
+        Успамяні ж мяне, мама, Хоць раз у аўторак,
+        Як я успамінаю на дзень Разоў сорак."
+      </p>
+      <hr class="songs-separator">
+      <p class="css-content-text" id="js-songs-river">
+        ...
+      </p>
+      <hr class="songs-separator">
+      <p class="css-content-text" id="js-songs-rose">
+        А ў садзе ружа, Мілы мой Божа -
+        Несчасна мая Доль.
+        Не порадзіны, Не колядзіны -
+        Не родныя Мамкі. 
+        Пасылала б я Чорну галачку
+        На той свет Па мамку.
+        Сакаліначку На Украіначку
+        На сваю Радзімку.
+        Саколік ляціць Не далётае
+        Мамачка даўно Ждзёць.
+        "Ой, рада б я ўстаць,
+        Мае дзіцяці - Парадак Павесці.
+        Бо сыра зямля На грудзі лягла -
+        Не магу я Устаці.
+        Сасновы дошкі Сціснулі ножкі -
+        Не магу пайсці, Ісці."
+      </p>
+      <hr class="songs-separator">
+      <p class="css-content-text" id="js-songs-fire-pine">
+        Агу, вясна! Агу, красна!
+        А што ж ты нам прынесла?
+        Весначуха-балбатуха, 
+        Воран крача- Сыра хоча! Сыра хоча,
+        Дзеўка плача - Замуж хоча!
+        Не крач, воран - Накрачэшся!
+        Не плач, дзеўка - Наплачэшся!
+        Воран крача-Сыра з'еўшы,
+        Дзеўка плача Сына меўшы.
+        Гарэла сосна, Палала.
+        Пад ёю дзеўка Стаяла.
+        Рускую косу Часала.
+        "Ой, косы-косы Вы ж мае!
+        Мала служылі Вы ў мяне!
+        Ой, больш служыць Не будзеце!
+        Пад белы вялён (вэлюм) Пойдзеце!"
+      </p>
+      <hr class="songs-separator">
+      <p class="css-content-text" id="js-songs-moose">
+        Ой злавілі Ды сівогога лося У гаросе.
+        Як і пачула Яно старая ласіца У лузе.
+        Як і кінула Крутыя рогі Пад ногі.
+        "Няхай мае Крутыя рогі Прападуць!
+        Куды ж майго Сівога лася Павядуць?"
+      </p>
+
+      <p class="css-content-text" id="js-content-words-final">
+        Узыходзіць сонца і заходзіць... Святло – цемра, дзень –
+        ноч... I зноў: святло – цемра, дзень – ноч... Прылятаюць з
+        выраю птушкі і адлятаюць у вырай... Зелянеюць дрэвы,
+        кусты і жаўцеюць, скідваюць з сябе лісце, астаюцца быццам
+        голыя... Падае ў зямлю зерне, прарастае, дае ўсходы і
+        новае зерне – новае насенне... Вясна, лета, восень, зіма... I
+        зноў: вясна, лета, восень, зіма... За адным пакаленнем
+        людзей ідзе яшчэ і яшчэ пакаленне... Што значым ты, я, ён,
+        яна, усе мы ў гэтым няспынным і вечным кругазвароце?
+        Нараджаемся, жывём, паміраем... Як нараджаліся, жылі і
+        памёрлі многія-многія мільёны, мільярды ўжо да нас. У чым
+        сэнс чалавечага існавання, жыцця, з’яўлення на свет?
+        Дзеля чаго нараджаліся і нараджаемся, што павінны
+        зрабіць, пакінуць нашчадкам, тым, хто прыйдзе на змену,
+        будзе жыць пасля нас? У каго спытаць, хто, хто скажа,
+        навучыць?.. А можа... I не спрабаваць шукаць адказу, не
+        думаць пра тое, чаго пры ўсім сваім жаданні ўсё адно не
+        ўведаеш, не пытаць ні ў кога ні пра што, а жыць, як
+        набяжыць... Жыць, як жылі бацькі, дзяды, прадзеды нашы...
+        А яны... Што ведаем мы пра іх, нашых бацькоў, дзядоў,
+        прадзедаў, пра іхняе жыццё-быццё, іхнія думкі і мары,
+        клопат і дбанне? Ну не пра ўсіх, хто жыў даўным-даўно, дык
+        хоць бы пра свой род, сваіх продкаў?..
       </p>
   </div>
     <footer>
