--- a/index.html
+++ b/index.html
@@ -49,11 +49,9 @@
       </div>
     </div>
     <div class="content-container">
+      <!-- тут павінен быць маніфест, але пакуль так -->
       <p class="css-content-text" id="js-content-text">
-        Наш праект гэта даслед на тэму з'яулення народнай песні яе роля ў жыцці
-        продкаў і ў жыцці сучаснага соцыўма. Эксперымент на конт магчымай
-        актуалізацыі народнай творчасці ў сучасным уяўленні, актуалізацыя
-        народнай песні.
+        «Не забывайце ж мовы нашай роднай, каб не умёрлі».<br>Францішак Багушэвіч, славуты беларускі паэт.
       </p>
 
       <div class="css-content-img" id="js-dinamic-image"></div>
@@ -88,11 +86,48 @@
           маленстве, на якіх выхоўваўся, рос, як кажуць у нас, на лес
           гледзячы...Хто дбае, той і мае... 
           Свет не без добрых людзей... 
-          І жыць будзем, і гуляць будзем, а прыйдзе смерць – паміраць будзем..
+          І жыць будзем, і гуляць будзем, а прыйдзе смерць – паміраць будзем...
         </p>
     </div>
 
     <div class="content-container">
+      <h3 class="content__title" id="js-zamova-title">Замова</h3>
+
+      <p class="css-content-text" id="js-zamova-txt">
+        (Супраць ліхога вока) 
+        Госпадзі, баславі, Госпадзі, пасабі! 
+        Ад прысух, ад нетух, 
+        Ад урокаў, ад парокаў, 
+        І дзвенаццаці цароў, 
+        І дзвенаццаці каралёў, 
+        І дзвенаццаці прысух, 
+        І дзвенаццаці нетух. 
+        І адкуда вы прыкаціліся? 
+        І на што вы спахваціліся? 
+        Ілі на радасьцях? 
+        Ілі на завісьцях? 
+        Ілі на спорных? 
+        Ілі на вздорных? 
+        Ад красных дзявіц, 
+        Ад удалых маладзіц, 
+        Ад старых старыкоў, 
+        Ад маладых маладцоў, 
+        І ад перважонца, 
+        І ад другажонца, 
+        І ад чорнага глаза, 
+        І ад чорнага, падзадорнага, 
+        І з боку сматрашчага, 
+        З боку захадзяшчага. 
+        Вам тут не быць, не жыць, 
+        Прыткі прыстаўкі! 
+        Ідзіце вы на мхі, на балота, 
+        На гнілыя калода, 
+        На леса дрэмучыя, 
+        На места тапучыя, 
+        Там ваш род-племені, 
+        Явства сахарныя, 
+        А рабу Івану добрага здароўя
+      </p>
 
       <h3 class="content__title" id="js-songs-title">Песні</h3>
 
@@ -104,11 +139,11 @@
         Абараніла Залатое калечка.
         "А хто ж тое Калечка дастане,
         Той са мною На рушнічак стане."
-        (возьме ў жены) Адазваўся
-        Хлопец маладзенькі: "А я ж тваё
-        Калечка дастану, Я ж з табою 
-        На рушнічак стану!" -"Лепей буду 
-        Палын горкі есці, Чым з табою За столікам сесці!"
+        Адазваўся Хлопец маладзенькі: 
+        "А я ж тваё Калечка дастану,
+        Я ж з табою На рушнічак стану!"
+        - "Лепей буду Палын горкі есці,
+        Чым з табою За столікам сесці!"
       </p>
       <hr class="songs-separator">
       <p class="css-content-text" id="js-songs-pine">
@@ -144,7 +179,14 @@
       </p>
       <hr class="songs-separator">
       <p class="css-content-text" id="js-songs-river">
-        ...
+        Ішоў міленькі лужочкам, А я млада беражком.
+        Махнуў міленькі платочкам, А я праваю рукой.
+        Чэраз рэчку падай ручку, Чэраз быструю раку.
+        Гэта рэчачка шырока, Да крутыя берага.
+        Гэта рэчка рассярчала, Як ударыла вална,
+        Як ударыла вална Да ў крутыя берага.
+        Наступае маё ўрэмя Усё халодная зіма,
+        Нету следу на дарожцы, Майго мілага няма.
       </p>
       <hr class="songs-separator">
       <p class="css-content-text" id="js-songs-rose">
