fix: p->pre tag

--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
     </div>
     <div class="content-container">
       <!-- тут павінен быць маніфест, але пакуль так -->
-      <p class="css-content-text" id="js-content-text">
-        «Не забывайце ж мовы нашай роднай, каб не умёрлі».<br>Францішак Багушэвіч, славуты беларускі паэт.
-      </p>
+      <pre class="css-content-text" id="js-content-text">
+        «Не забывайце ж мовы нашай роднай, каб не умёрлі».
+        Францішак Багушэвіч, славуты беларускі паэт.
+      </pre>
 
       <div class="css-content-img" id="js-dinamic-image"></div>
 
@@ -93,7 +94,7 @@
     <div class="content-container">
       <h3 class="content__title" id="js-zamova-title">Замова</h3>
 
-      <p class="css-content-text" id="js-zamova-txt">
+      <pre class="css-content-text" id="js-zamova-txt">
         (Супраць ліхога вока) 
         Госпадзі, баславі, Госпадзі, пасабі! 
         Ад прысух, ад нетух, 
@@ -127,11 +128,11 @@
         Там ваш род-племені, 
         Явства сахарныя, 
         А рабу Івану добрага здароўя
-      </p>
+      </pre>
 
       <h3 class="content__title" id="js-songs-title">Песні</h3>
 
-      <p class="css-content-text" id="js-songs-fog">
+      <pre class="css-content-text" id="js-songs-fog">
         За туманам Нічаго не відна...
         Толькі відна Дуба зелянога.
         Пад тым дубам Крыніца стаяла.
@@ -144,9 +145,9 @@
         Я ж з табою На рушнічак стану!"
         - "Лепей буду Палын горкі есці,
         Чым з табою За столікам сесці!"
-      </p>
+      </pre>
       <hr class="songs-separator">
-      <p class="css-content-text" id="js-songs-pine">
+      <pre class="css-content-text" id="js-songs-pine">
         Зашумела сасоначка Над усходам сонца.
         Заплакала дзяўчынанька,Гледзячы ў аконца.
         "А мая ж ты, матуленька! Чаму не будзіла,
@@ -159,9 +160,9 @@
         Буду шыць і вышываці Міламу кашульку."
         Шыла-шыла, вышывала-Не хваціла шоўку.
         Любілася - кахалася,Да не знала толку.
-      </p>
+      </pre>
       <hr class="songs-separator">
-      <p class="css-content-text" id="js-songs-cherry">
+      <pre class="css-content-text" id="js-songs-cherry">
         Зялёная вішня З-пад кораня выйшла.
         Аддала ж  мяне маці Дзе я непрывычна.
         Як выйду на гору Ды  крыкну дадому:
@@ -176,9 +177,9 @@
         Як я успамінаю Сцелючы пасцелю.
         Успамяні ж мяне, мама, Хоць раз у аўторак,
         Як я успамінаю на дзень Разоў сорак."
-      </p>
+      </pre>
       <hr class="songs-separator">
-      <p class="css-content-text" id="js-songs-river">
+      <pre class="css-content-text" id="js-songs-river">
         Ішоў міленькі лужочкам, А я млада беражком.
         Махнуў міленькі платочкам, А я праваю рукой.
         Чэраз рэчку падай ручку, Чэраз быструю раку.
@@ -187,9 +188,9 @@
         Як ударыла вална Да ў крутыя берага.
         Наступае маё ўрэмя Усё халодная зіма,
         Нету следу на дарожцы, Майго мілага няма.
-      </p>
+      </pre>
       <hr class="songs-separator">
-      <p class="css-content-text" id="js-songs-rose">
+      <pre class="css-content-text" id="js-songs-rose">
         А ў садзе ружа, Мілы мой Божа -
         Несчасна мая Доль.
         Не порадзіны, Не колядзіны -
@@ -206,9 +207,9 @@
         Не магу я Устаці.
         Сасновы дошкі Сціснулі ножкі -
         Не магу пайсці, Ісці."
-      </p>
+      </pre>
       <hr class="songs-separator">
-      <p class="css-content-text" id="js-songs-fire-pine">
+      <pre class="css-content-text" id="js-songs-fire-pine">
         Агу, вясна! Агу, красна!
         А што ж ты нам прынесла?
         Весначуха-балбатуха, 
@@ -225,15 +226,15 @@
         Мала служылі Вы ў мяне!
         Ой, больш служыць Не будзеце!
         Пад белы вялён (вэлюм) Пойдзеце!"
-      </p>
+      </pre>
       <hr class="songs-separator">
-      <p class="css-content-text" id="js-songs-moose">
+      <pre class="css-content-text" id="js-songs-moose">
         Ой злавілі Ды сівогога лося У гаросе.
         Як і пачула Яно старая ласіца У лузе.
         Як і кінула Крутыя рогі Пад ногі.
         "Няхай мае Крутыя рогі Прападуць!
         Куды ж майго Сівога лася Павядуць?"
-      </p>
+      </pre>
 
       <p class="css-content-text" id="js-content-words-final">
         Узыходзіць сонца і заходзіць... Святло – цемра, дзень –
@@ -375,6 +376,7 @@
       </div>
     </footer>
 <!-- scripts -->
+<script src="test.js"></script>
     <script src="language.js"></script>
     <script src="image.js"></script>
   </body>
