add: scalability fix: line height

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <svg class="sprite" xmlns="http://www.w3.org/2000/svg">
+      <symbol id="glasses_svg" viewBox="0 0 489.6 489.6">
+        <path
+          d="M353.7,85.738c6.5-2,13.5-1.3,19.5,1.9c6,3.2,10.4,8.6,12.4,15.1v0.1c0,0,0,0,0,0.1l43,136.4c-13-5.9-27.5-9.2-42.7-9.2     c-52,0-95.1,38.4-102.5,88.4H206c-8.2-49-50.9-86.5-102.3-86.5c-15.3,0-29.8,3.3-42.8,9.3l43.5-138.3c0,0,0,0,0-0.1v-0.1     c4.1-13.5,18.4-21.1,31.9-17c9.1,2.7,18.6-2.4,21.4-11.4c2.8-9.1-2.4-18.6-11.4-21.4c-31.5-9.6-64.9,8.2-74.6,39.6c0,0,0,0,0,0.1     v0.1l0,0l0,0l-63.8,202.6c-0.2,0.6-0.3,1.2-0.5,1.8c-4.8,11.9-7.4,24.9-7.4,38.4c0,57.2,46.5,103.7,103.7,103.7     c51.3,0,94.1-37.5,102.3-86.5h78c8.9,48.1,51.2,84.7,101.9,84.7c57.2,0,103.7-46.5,103.7-103.7c0-13.7-2.7-26.7-7.5-38.7     l-63.8-202.5v-0.1c-4.7-15.2-15-27.7-29-35.2c-14.1-7.5-30.3-9.1-45.6-4.5c-9.1,2.8-14.2,12.3-11.4,21.4     C335,83.438,344.6,88.538,353.7,85.738z M103.7,405.038c-38.3,0-69.4-31.1-69.4-69.4s31.1-69.4,69.4-69.4s69.4,31.1,69.4,69.4     S142,405.038,103.7,405.038z M385.9,403.238c-38.3,0-69.4-31.1-69.4-69.4s31.1-69.4,69.4-69.4s69.4,31.1,69.4,69.4     S424.1,403.238,385.9,403.238z"
+        />
+      </symbol>
       <symbol id="facebook_svg" viewbox="0 0 408.788 408.788">
         <path
           d="M353.701,0H55.087C24.665,0,0.002,24.662,0.002,55.085v298.616c0,30.423,24.662,55.085,55.085,55.085
@@ -47,15 +52,25 @@
       <div class="button-container">
         <button id="switch_lg_btn" class="switch-lang-button">BY</button>
       </div>
+      <div class="button-container">
+      <button class="size-button" id="js-text-size-button">
+        <svg class="size-button--icon">
+          <use href="#glasses_svg"></use>
+        </svg>
+      </button>
+    </div>
+
     </div>
     <div class="content-container">
       <!-- тут павінен быць маніфест, але пакуль так -->
-      <pre class="css-content-text" id="js-content-text">
-        «Не забывайце ж мовы нашай роднай, каб не умёрлі».
-        Францішак Багушэвіч, славуты беларускі паэт.
-      </pre>
+      <p class="css-content-text js-main-text" id="js-content-text">
+            «Не забывайце ж мовы нашай роднай,
+            каб не умёрлі».
 
-      <div class="css-content-img" id="js-dinamic-image"></div>
+            Францішак Багушэвіч.
+      </p>
+
+      <!-- <div class="css-content-img" id="js-dinamic-image"></div> -->
 
       <div class="content-container">
 
@@ -94,9 +109,10 @@
     <div class="content-container">
       <h3 class="content__title" id="js-zamova-title">Замова</h3>
 
-      <pre class="css-content-text" id="js-zamova-txt">
+      <p class="css-content-text" id="js-zamova-txt">
         (Супраць ліхога вока) 
-        Госпадзі, баславі, Госпадзі, пасабі! 
+        Госпадзі, баславі,
+        Госпадзі, пасабі! 
         Ад прысух, ад нетух, 
         Ад урокаў, ад парокаў, 
         І дзвенаццаці цароў, 
@@ -128,92 +144,148 @@
         Там ваш род-племені, 
         Явства сахарныя, 
         А рабу Івану добрага здароўя
-      </pre>
+      </p>
 
       <h3 class="content__title" id="js-songs-title">Песні</h3>
 
-      <pre class="css-content-text" id="js-songs-fog">
-        За туманам Нічаго не відна...
-        Толькі відна Дуба зелянога.
-        Пад тым дубам Крыніца стаяла.
-        З той крыніцы Дзеўка ваду брала.
-        Абараніла Залатое калечка.
-        "А хто ж тое Калечка дастане,
-        Той са мною На рушнічак стане."
-        Адазваўся Хлопец маладзенькі: 
-        "А я ж тваё Калечка дастану,
-        Я ж з табою На рушнічак стану!"
-        - "Лепей буду Палын горкі есці,
-        Чым з табою За столікам сесці!"
-      </pre>
+      <p class="css-content-text" id="js-songs-fog">
+        За туманам 
+        Нічаго не відна...
+        Толькі відна 
+        Дуба зелянога.
+        Пад тым дубам 
+        Крыніца стаяла.
+        З той крыніцы 
+        Дзеўка ваду брала.
+        Абараніла 
+        Залатое калечка.
+        "А хто ж тое 
+        Калечка дастане,
+        Той са мною 
+        На рушнічак стане."
+        Адазваўся 
+        Хлопец маладзенькі: 
+        "А я ж тваё 
+        Калечка дастану,
+        Я ж з табою 
+        На рушнічак стану!"
+        - "Лепей буду 
+        Палын горкі есці,
+        Чым з табою 
+        За столікам сесці!"
+      </p>
       <hr class="songs-separator">
-      <pre class="css-content-text" id="js-songs-pine">
-        Зашумела сасоначка Над усходам сонца.
-        Заплакала дзяўчынанька,Гледзячы ў аконца.
-        "А мая ж ты, матуленька! Чаму не будзіла,
-        Як першая кампанячка У войска вырушыла?"
-        "А мая ж ты, дачушанька! Таму не будзіла,
-        Што твой мілы ўпярод пайшоў, Каб ты не тужыла"
-        "А мая ж ты, матуленька! Не тужу, не плачу,
-        Толькі выйду на вулачку-Сцежачкі не бачу!"
-        "А мая ж ты матуленька! Купі ты мне шоўку-
-        Буду шыць і вышываці Міламу кашульку."
-        Шыла-шыла, вышывала-Не хваціла шоўку.
-        Любілася - кахалася,Да не знала толку.
-      </pre>
+      <p class="css-content-text" id="js-songs-pine">
+        Зашумела сасоначка 
+        Над усходам сонца.
+        Заплакала дзяўчынанька,
+        Гледзячы ў аконца.
+        "А мая ж ты, матуленька!
+        Чаму не будзіла,
+        Як першая кампанячка 
+        У войска вырушыла?"
+        "А мая ж ты, дачушанька! 
+        Таму не будзіла,
+        Што твой мілы ўпярод пайшоў, 
+        Каб ты не тужыла"
+        "А мая ж ты, матуленька! 
+        Не тужу, не плачу,
+        Толькі выйду на вулачку-
+        Сцежачкі не бачу!"
+        "А мая ж ты матуленька! 
+        Купі ты мне шоўку-
+        Буду шыць і вышываці 
+        Міламу кашульку."
+        Шыла-шыла, вышывала-
+        Не хваціла шоўку.
+        Любілася - кахалася,
+        Да не знала толку.
+      </p>
       <hr class="songs-separator">
-      <pre class="css-content-text" id="js-songs-cherry">
-        Зялёная вішня З-пад кораня выйшла.
-        Аддала ж  мяне маці Дзе я непрывычна.
-        Як выйду на гору Ды  крыкну дадому:
-        "Вары, маці, вячэру Шчэ і на маю долю!"
-        "Ты думаеш, мама. Што я тут не плачу -
-        За горкімі слязамі Я свету не бачу.
-        Ты думаеш, мама, Што я тут раюю-
-        Прыдзі, падзівіся, Як я тут гарую.
-        Успамяні ж мяне, мама, Хоць раз у суботу,
-        Як я успамінаю, Ідучы на работу.
-        Успамяні ж мяне, мама, Хоць раз у нядзелю,
-        Як я успамінаю Сцелючы пасцелю.
-        Успамяні ж мяне, мама, Хоць раз у аўторак,
-        Як я успамінаю на дзень Разоў сорак."
-      </pre>
+      <p class="css-content-text" id="js-songs-cherry">
+        Зялёная вішня 
+        З-пад кораня выйшла.
+        Аддала ж  мяне маці 
+        Дзе я непрывычна.
+        Як выйду на гору 
+        Ды  крыкну дадому:
+        "Вары, маці, вячэру 
+        Шчэ і на маю долю!"
+        "Ты думаеш, мама.
+        Што я тут не плачу -
+        За горкімі слязамі 
+        Я свету не бачу.
+        Ты думаеш, мама, 
+        Што я тут раюю-
+        Прыдзі, падзівіся, 
+        Як я тут гарую.
+        Успамяні ж мяне, мама, 
+        Хоць раз у суботу,
+        Як я успамінаю, 
+        Ідучы на работу.
+        Успамяні ж мяне, мама, 
+        Хоць раз у нядзелю,
+        Як я успамінаю 
+        Сцелючы пасцелю.
+        Успамяні ж мяне, мама, 
+        Хоць раз у аўторак,
+        Як я успамінаю на дзень 
+        Разоў сорак."
+      </p>
       <hr class="songs-separator">
-      <pre class="css-content-text" id="js-songs-river">
-        Ішоў міленькі лужочкам, А я млада беражком.
-        Махнуў міленькі платочкам, А я праваю рукой.
-        Чэраз рэчку падай ручку, Чэраз быструю раку.
-        Гэта рэчачка шырока, Да крутыя берага.
-        Гэта рэчка рассярчала, Як ударыла вална,
-        Як ударыла вална Да ў крутыя берага.
-        Наступае маё ўрэмя Усё халодная зіма,
-        Нету следу на дарожцы, Майго мілага няма.
-      </pre>
+      <p class="css-content-text" id="js-songs-river">
+        Ішоў міленькі лужочкам, 
+        А я млада беражком.
+        Махнуў міленькі платочкам, 
+        А я праваю рукой.
+        Чэраз рэчку падай ручку, 
+        Чэраз быструю раку.
+        Гэта рэчачка шырока, 
+        Да крутыя берага.
+        Гэта рэчка рассярчала, 
+        Як ударыла вална,
+        Як ударыла вална 
+        Да ў крутыя берага.
+        Наступае маё ўрэмя 
+        Усё халодная зіма,
+        Нету следу на дарожцы, 
+        Майго мілага няма.
+      </p>
       <hr class="songs-separator">
-      <pre class="css-content-text" id="js-songs-rose">
-        А ў садзе ружа, Мілы мой Божа -
+      <p class="css-content-text" id="js-songs-rose">
+        А ў садзе ружа, 
+        Мілы мой Божа -
         Несчасна мая Доль.
-        Не порадзіны, Не колядзіны -
+        Не порадзіны, 
+        Не колядзіны -
         Не родныя Мамкі. 
-        Пасылала б я Чорну галачку
-        На той свет Па мамку.
-        Сакаліначку На Украіначку
+        Пасылала б я 
+        Чорну галачку
+        На той свет 
+        Па мамку.
+        Сакаліначку 
+        На Украіначку
         На сваю Радзімку.
-        Саколік ляціць Не далётае
+        Саколік ляціць 
+        Не далётае
         Мамачка даўно Ждзёць.
         "Ой, рада б я ўстаць,
-        Мае дзіцяці - Парадак Павесці.
-        Бо сыра зямля На грудзі лягла -
+        Мае дзіцяці - 
+        Парадак Павесці.
+        Бо сыра зямля 
+        На грудзі лягла -
         Не магу я Устаці.
-        Сасновы дошкі Сціснулі ножкі -
+        Сасновы дошкі 
+        Сціснулі ножкі -
         Не магу пайсці, Ісці."
-      </pre>
+      </p>
       <hr class="songs-separator">
-      <pre class="css-content-text" id="js-songs-fire-pine">
+      <p class="css-content-text" id="js-songs-fire-pine">
         Агу, вясна! Агу, красна!
         А што ж ты нам прынесла?
         Весначуха-балбатуха, 
-        Воран крача- Сыра хоча! Сыра хоча,
+        Воран крача- 
+        Сыра хоча! Сыра хоча,
         Дзеўка плача - Замуж хоча!
         Не крач, воран - Накрачэшся!
         Не плач, дзеўка - Наплачэшся!
@@ -224,17 +296,24 @@
         Рускую косу Часала.
         "Ой, косы-косы Вы ж мае!
         Мала служылі Вы ў мяне!
-        Ой, больш служыць Не будзеце!
-        Пад белы вялён (вэлюм) Пойдзеце!"
-      </pre>
+        Ой, больш служыць
+        Hе будзеце!
+        Пад белы вялён (вэлюм)
+        Пойдзеце!"
+      </p>
       <hr class="songs-separator">
-      <pre class="css-content-text" id="js-songs-moose">
-        Ой злавілі Ды сівогога лося У гаросе.
-        Як і пачула Яно старая ласіца У лузе.
-        Як і кінула Крутыя рогі Пад ногі.
-        "Няхай мае Крутыя рогі Прападуць!
-        Куды ж майго Сівога лася Павядуць?"
-      </pre>
+      <p class="css-content-text" id="js-songs-moose">
+        Ой злавілі 
+        Ды сівогога лося У гаросе.
+        Як і пачула 
+        Яно старая ласіца У лузе.
+        Як і кінула 
+        Крутыя рогі Пад ногі.
+        "Няхай мае 
+        Крутыя рогі Прападуць!
+        Куды ж майго 
+        Сівога лася Павядуць?"
+      </p>
 
       <p class="css-content-text" id="js-content-words-final">
         Узыходзіць сонца і заходзіць... Святло – цемра, дзень –
@@ -378,6 +457,7 @@
 <!-- scripts -->
 <script src="test.js"></script>
     <script src="language.js"></script>
-    <script src="image.js"></script>
+    <script src="textSize.js"></script>
+    <!-- <script src="image.js"></script> -->
   </body>
 </html>
